<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_for_screen"
    tools:context=".ui.screens.SelectVariantFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_main_screen_title"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/exo2_medium"
        android:gravity="center" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_main_screen_description"
        android:layout_marginHorizontal="16dp"
        android:textSize="12sp"
        android:textColor="@color/dark_red"
        android:textStyle="bold"
        android:fontFamily="@font/exo2_medium"
        android:gravity="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_first_variant"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:backgroundTint="@color/white"
                app:cornerRadius="8dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:elevation="0dp"
                android:elevation="0dp"
                app:strokeWidth="0dp"
                android:text="@string/str_first_variant"
                app:rippleColor="@color/light_gray"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/exo2_medium"
                app:icon="@drawable/ic_login"
                app:iconTint="@color/color_blue"
                app:iconSize="24sp"
                app:iconGravity="end"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_second_variant"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:backgroundTint="@color/white"
                app:cornerRadius="8dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:elevation="0dp"
                android:elevation="0dp"
                app:strokeWidth="0dp"
                android:text="@string/str_second_variant"
                app:rippleColor="@color/light_gray"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/exo2_medium"
                app:icon="@drawable/ic_login"
                app:iconTint="@color/color_blue"
                app:iconSize="24sp"
                app:iconGravity="end"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_third_variant"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:backgroundTint="@color/white"
                app:cornerRadius="8dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:elevation="0dp"
                android:elevation="0dp"
                app:strokeWidth="0dp"
                android:text="@string/str_third_variant"
                app:rippleColor="@color/light_gray"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/exo2_medium"
                app:icon="@drawable/ic_login"
                app:iconTint="@color/color_blue"
                app:iconSize="24sp"
                app:iconGravity="end"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_forth_variant"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:backgroundTint="@color/white"
                app:cornerRadius="8dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:elevation="0dp"
                android:elevation="0dp"
                app:strokeWidth="0dp"
                android:text="@string/str__forth_variant"
                app:rippleColor="@color/light_gray"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/exo2_medium"
                app:icon="@drawable/ic_login"
                app:iconTint="@color/color_blue"
                app:iconSize="24sp"
                app:iconGravity="end"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_fifth_variant"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:backgroundTint="@color/white"
                app:cornerRadius="8dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:elevation="0dp"
                android:elevation="0dp"
                app:strokeWidth="0dp"
                android:text="@string/str_fifth_variant"
                app:rippleColor="@color/light_gray"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/exo2_medium"
                app:icon="@drawable/ic_login"
                app:iconTint="@color/color_blue"
                app:iconSize="24sp"
                app:iconGravity="end"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sixth_variant"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:backgroundTint="@color/white"
                app:cornerRadius="8dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:elevation="0dp"
                android:elevation="0dp"
                app:strokeWidth="0dp"
                android:text="@string/str_sixth_variant"
                app:rippleColor="@color/light_gray"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/exo2_medium"
                app:icon="@drawable/ic_login"
                app:iconTint="@color/color_blue"
                app:iconSize="24sp"
                app:iconGravity="end"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>